samples/_failures_safe/1761476796_2be093_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1c7df92.c: In function ‘main’:
./samples/SAFE/__tmp_a1c7df92.c:161:12: error: missing terminating " character
  161 |     printf("Compressed size: %zu
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a1c7df92.c:161:5: error: expected expression at end of input
  161 |     printf("Compressed size: %zu
      |     ^~~~~~
./samples/SAFE/__tmp_a1c7df92.c:161:5: error: expected declaration or statement at end of input
